# Carcosa

./: .gitignore  Cargo.toml  README.md  bindings.ts  devenv.nix  devenv.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
carcosa/: package.json  pnpm-lock.yaml
carcosa/src/: App.tsx  main.tsx
carcosa/src-tauri/: Cargo.toml  tauri.conf.json
carcosa/src-tauri/capabilities/: default.json
carcosa/src-tauri/src/: error.rs  lib.rs  main.rs
carcosa/src-tauri/src/extensions/: app.rs  databases.rs  mod.rs
carcosa/src-tauri/src/procedures/: events.rs  mod.rs  project_management.rs
carcosa/src-tauri/src/types/: app.rs  mod.rs  network.rs  project.rs
carcosa/src/styles/: index.scss  modals.scss
carcosa/src/util/api/: bindings.ts  index.ts
carcosa/src/util/modals/: Provider.tsx  index.ts  types.ts
carcosa/src/util/modals/renderers/: CreateProject.tsx  index.ts  util.tsx
carcosa/src/util/themes/: theme.ts
carcosa/src/views/: routes.tsx
carcosa/src/views/startup/: index.tsx
src/: api.ts  events.ts  localization.tsx  main.tsx  notifications.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: carcosa.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: application.rs  mod.rs  templates.rs
src-tauri/src/carcosa/: application.rs  mod.rs  templates.rs
src-tauri/src/models/: mod.rs
src-tauri/src/models/v1/: mod.rs  project_state.rs  template.rs
src-tauri/src/templates/: containers.rs  fields.rs  mod.rs  other_nodes.rs  types.rs
src-tauri/src/types/: state.rs
src/components/DynamicIcons/: DynamicIcon.tsx  IconSelector.tsx  IconsProvider.tsx  index.ts  style.scss  util.ts
src/context/init/: InitProvider.tsx  index.ts  types.ts
src/context/routing/: RoutingElements.tsx  index.ts  types.ts  utils.ts
src/lang/: en.json
src/modals/: CreateProjectModal.tsx  common.tsx  index.ts  modals.scss
src/modals/ResourcesModal/: index.tsx  modal.tsx  style.scss  types.ts
src/modals/ResourcesModal/views/index/: IndexView.tsx
src/modals/ResourcesModal/views/layout/: ModalLayout.tsx
src/modals/ResourcesModal/views/template_create_form/: TemplateCreator.tsx
src/modals/ResourcesModal/views/template_creation/: TemplateCreation.tsx
src/modals/ResourcesModal/views/template_editor/: TemplateEditor.tsx
src/templates/: NodePicker.tsx  templateManager.ts
src/templates/nodes/: index.ts
src/templates/nodes/common/: index.ts  types.ts
src/theme/: cssVariableResolver.ts  theme.ts
src/ui/: Wrapper.tsx
src/ui/landing/: LandingPage.tsx  style.scss
src/ui/layout/: Layout.tsx  style.scss
