[package]
name = "carcosa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carcosa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bon = "3.6.5"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
taurpc = "0.5.1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
native_db = "0.8.2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

