[package]
name = "carcosa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carcosa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bon = "3.6.5"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
taurpc = "0.5.1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "tokio", "chrono", "serde", "serde_json"] }
native_db = "0.8.2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
strum = { version = "0.27.2", features = ["derive"] }
parking_lot = { version = "0.12.4", features = ["arc_lock", "serde", "send_guard"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
native_model = "=0.4.20"
once_cell = { version = "1.21.3", features = ["parking_lot"] }
async-trait = "0.1.88"
serde_json = "1.0.142"
specta-typescript = "0.0.9"
paste = "1.0.15"
spire_enum = "0.6.0"

