[package]
name = "carcosa"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carcosa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["chrono", "derive", "export", "function", "serde", "serde_json", "tokio", "uuid"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4", "fast-rng", "v7"] }
specta-typescript = { workspace = true }
parking_lot = { workspace = true, features = ["serde", "arc_lock", "send_guard"] }
tokio = { workspace = true, features = ["full"] }
bon = { workspace = true }
getset.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
taurpc = { workspace = true }
axum = { workspace = true }
platform-dirs = { workspace = true }
redb = { workspace = true, features = ["uuid", "chrono_v0_4", "logging"] }
log = { workspace = true, features = ["serde", "kv_serde"] }
fern = { workspace = true, features = ["chrono", "colored"] }
tauri-plugin-persisted-scope = "2"
yrs = "0.25.0"
iroh = "0.96.1"
async-trait = "0.1.89"
strum = { version = "0.27.2", features = ["derive"] }
base64 = "0.22.1"
rand = { version = "^0.9.2", features = ["serde"] }

